# weston

./: .gitignore  README-CH.md  build.sh  meson.build  meson_options.txt  weston.ini
compositor/: main.c
include/libweston/: backend-custom.h  libweston.h  meson.build
libweston/: compositor.c  launcher-direct.c  meson.build
libweston/backend-custom/: CustomBackend.cpp  CustomBackend.h  CustomDefine.h  IImageWriter.h  IRender.cpp  IRender.h  ImageWriterDispatcher.cpp  ImageWriterDispatcher.h  ImageWriterFactory.cpp  ImageWriterFactory.h  InputDevice.cpp  InputDevice.h  backend-custom.drawio  custom.cpp  custom_wrapper.cpp  meson.build
libweston/backend-custom/ImageWriter/: DummyImageWriter.h  FileImageWriter.cpp  FileImageWriter.h  ShmImageWriter.cpp  ShmImageWriter.h
libweston/backend-custom/Render/: PixmanRender.cpp  PixmanRender.h
shared/: config-parser.c
